--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/viva-admin/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/viva-admin/logo192.png"/><link rel="manifest" href="/viva-admin/manifest.json"/><title>React App</title><script defer="defer" src="/viva-admin/static/js/main.997c6808.js"></script><link href="/viva-admin/static/css/main.f855e6bc.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/viva-admin/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Vite Express</title>
+		<script type="module" crossorigin src="/viva-admin/assets/index.6198c9a2.js"></script>
+		<link rel="stylesheet" href="/viva-admin/assets/index.5e9b9365.css">
+	</head>
+	<body>
+		<div id="root"></div>
+		<div id="modal"></div>
+		<div id="toast"></div>
+		
+	</body>
+</html>
